Include attachments card in new TP page

--- a/tcms/templates/plan/get.html
+++ b/tcms/templates/plan/get.html
@@ -134,7 +134,7 @@ Nitrate.TestPlans.Instance = {
                             </div>
 			</div>
 			<div id="attachment" class="tab_list" style="display:none">
-				{% include "plan/get_attachments.html" %}
+				MIGRATED TO PATTERNFLY
 			</div>
 			<div id="testruns" class="tab_list" style="display:none;">
                             <!--
