--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -92,6 +92,10 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
             {% include 'include/tags_card.html' with add_perm=perms.testcases.add_testcasetag %}
         </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            {% include 'include/attachments.html' %}
+        </div>
     </div>
 </div>
 
