Use HTML from template instead of rendering in JavaScript
also adds a TODO comment for misaligned titles

cc @RMadjev

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -116,7 +116,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="list-view-pf-main-info"></div>
+            <div class="list-view-pf-main-info">
+                <!-- todo: this text is slightly misaligned. for some reason goes to the top -->
+                <a class="testcase" href="#"></a>
+            </div>
         </div>
         <div class="list-group-item-container container-fluid hidden">
             <div class="row">
