--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -83,7 +83,9 @@
                 <h2 class="card-pf-title">
                     {% trans 'Confirmed test cases' %}
                 </h2>
-                <div id="confirmed-testcases" class="list-group tree-list-view-pf"></div>
+                <div class="card-pf-body">
+                    <div id="confirmed-testcases" class="list-group tree-list-view-pf"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -110,57 +112,54 @@
 <template id="test_case_row">
     <div class="list-group-item">
         <div class="list-group-item-header">
-            <div class="list-view-pf-expand">
-                <span class="fa fa-angle-right"></span>
-            </div>
-            <div class="list-view-pf-checkbox">
-                <input type="checkbox">
-            </div>
-            <div class="list-view-pf-actions">
-                <div class="dropdown pull-right dropdown-kebab-pf">
-                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdownKebabRight9"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        <span class="fa fa-ellipsis-v"></span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight9">
-                        <li><a href="#">{% trans 'Change status' %}</a></li>
-                    </ul>
-                </div>
-            </div>
             <div class="list-view-pf-main-info">
-                <!-- todo: this text is slightly misaligned. for some reason goes to the top -->
-                <a class="testcase" href="#"></a>
+                <div class="list-view-pf-left">
+                    <span class="fa fa-angle-right"></span>
+                </div>
+                <div class="list-view-pf-checkbox" style="margin-top: 0; margin-bottom: 0">
+                    <input type="checkbox">
+                </div>
+                <div class="list-view-pf-actions" style="margin-top: 0; margin-bottom: 0;">
+                    <div class="dropdown pull-right dropdown-kebab-pf">
+                        <button class="btn btn-link dropdown-toggle" type="button" id="dropdownKebabRight9"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <span class="fa fa-ellipsis-v"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight9">
+                            <li><a href="#">{% trans 'Change status' %}</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="list-view-pf-body">
+                    <div class="list-view-pf-description">
+                        <div class="list-group-item-text">
+                             <a class="js-test-case-link"></a>
+                         </div>
+                    </div>
+                    <div class="list-view-pf-additional-info">
+                        <div title="{% trans 'Priority' %}" class="list-view-pf-additional-info-item">
+                            <span class="fa fa-hourglass"></span>
+                            <span class="js-test-case-priority"></span>
+                        </div>
+                        <div title="{% trans 'Category' %}" class="list-view-pf-additional-info-item">
+                            <span class="fa fa-tag"></span>
+                            <span class="js-test-case-category"></span>
+                        </div>
+                        <div title="{% trans 'Author' %}" class="list-view-pf-additional-info-item">
+                            <span class="fa pficon-user"></span>
+                            <span class="js-test-case-author"></span>
+                        </div>
+                        <div title="{% trans 'Default tester' %}" class="list-view-pf-additional-info-item">
+                            <span class="fa fa-search"></span>
+                            <span class="js-test-case-tester"></span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="list-group-item-container container-fluid hidden">
             <div class="row">
                 <div class="col-md-12">Some test case widgets</div>
-            </div>
-        </div>
-    </div>
-</template>
-
-<template id="test_case_row_details">
-    <div class="list-view-pf-left">
-        <a class="js-test-case-link"></a>
-    </div>
-    <div class="list-view-pf-body">
-        <div class="list-view-pf-additional-info">
-            <div title="{% trans 'Priority' %}" class="list-view-pf-additional-info-item">
-                <span class="fa fa-hourglass"></span>
-                <span class="js-test-case-priority"></span>
-            </div>
-            <div title="{% trans 'Category' %}" class="list-view-pf-additional-info-item">
-                <span class="fa fa-tag"></span>
-                <span class="js-test-case-category"></span>
-            </div>
-            <div title="{% trans 'Author' %}" class="list-view-pf-additional-info-item">
-                <span class="fa pficon-user"></span>
-               <span class="js-test-case-author"></span>
-            </div>
-            <div title="{% trans 'Default Tester' %}" class="list-view-pf-additional-info-item">
-                <span class="fa fa-search"></span>
-                <span class="js-test-case-tester"></span>
             </div>
         </div>
     </div>
