Add is automated icon for testcase on testplan page

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -137,6 +137,9 @@
                          </div>
                     </div>
                     <div class="list-view-pf-additional-info">
+                        <div class="list-view-pf-additional-info-item">
+                            <span class="fa fa-cog fa-thumbs-up js-test-case-automated" data-automated="{% trans 'Automated' %}" data-manual="{% trans 'Manual' %}"></span>{# one of the classes is removed by the js #}
+                        </div>
                         <div title="{% trans 'Priority' %}" class="list-view-pf-additional-info-item">
                             <span class="fa fa-hourglass"></span>
                             <span class="js-test-case-priority"></span>
