Use direct indexing of data properties
instead of another conditional

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="list-view-pf-additional-info">
                         <div class="list-view-pf-additional-info-item">
-                            <span class="fa fa-cog fa-thumbs-up js-test-case-automated" data-automated="{% trans 'Automated' %}" data-manual="{% trans 'Manual' %}"></span>{# one of the classes is removed by the js #}
+                            <span class="fa fa-cog fa-thumbs-up js-test-case-automated" data-true="{% trans 'Automated' %}" data-false="{% trans 'Manual' %}"></span>{# one of the classes is removed by the js #}
                         </div>
                         <div title="{% trans 'Priority' %}" class="list-view-pf-additional-info-item">
                             <span class="fa fa-hourglass"></span>
