--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -110,7 +110,7 @@
 </template>
 
 <template id="test_case_row">
-    <div class="list-group-item">
+    <div class="list-group-item" data-testcase-pk="">
         <div class="list-group-item-header">
             <div class="list-view-pf-main-info">
                 <div class="list-view-pf-left">
@@ -126,7 +126,25 @@
                             <span class="fa fa-ellipsis-v"></span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight9">
-                            <li><a href="#">{% trans 'Change status' %}</a></li>
+                            <li class="dropdown-submenu dropdown-menu-left">
+                                <a tabindex="-1" href="#">{% trans 'Priority' %}</a>
+                                <ul class="dropdown-menu js-test-case-menu-priority">
+                                    <template id="menu-priority-item">
+                                        <li><a href="#" data-id=""></a></li>
+                                    </template>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu dropdown-menu-left">
+                                <a tabindex="-1" href="#">{% trans 'Status' %}</a>
+                                <ul class="dropdown-menu js-test-case-menu-status">
+                                    <template id="menu-status-item">
+                                        <li><a href="#" data-id=""></a></li>
+                                    </template>
+                                </ul>
+                            </li>
+                            <li><a class="js-test-case-menu-edit">{% trans 'Edit' %}</a></li>
+                            <li><a class="js-test-case-menu-delete">{% trans 'Delete' %}</a></li>
+                            <li><a class="js-test-case-menu-tester">{% trans 'Default tester' %}</a></li>
                         </ul>
                     </div>
                 </div>
