Populate testcase expand area on click

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -113,7 +113,7 @@
 </template>
 
 <template id="test_case_row">
-    <div class="list-group-item" data-testcase-pk="">
+    <div class="list-group-item js-testcase-row" data-testcase-pk="">
         <div class="list-group-item-header">
             <div class="list-view-pf-main-info">
                 <div class="list-view-pf-left">
