--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -199,7 +199,7 @@
                             </div><!-- /col -->
                         </div><!-- /row -->
                     </div>
-                    <div id="confirmed-testcases" class="list-group list-view-pf list-view-pf-view">
+                    <div id="testcases-list" class="list-group list-view-pf list-view-pf-view">
                     </div>
                 </div>
             </div>
