--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -108,7 +108,7 @@
                                                     {% trans 'Name' %}<span
                                                         class="caret"></span></button>
                                                 <ul class="dropdown-menu js-toolbar-filter-options">
-                                                    <li class="selected" data-filter-type="summary"><a>{% trans 'Name' %}</a></li>
+                                                    <li class="selected" data-filter-type="summary"><a>{% trans 'Summary' %}</a></li>
                                                     <li data-filter-type="category"><a>{% trans 'Category' %}</a></li>
                                                     <li data-filter-type="priority"><a>{% trans 'Priority' %}</a></li>
                                                     <li data-filter-type="author"><a>{% trans 'Author' %}</a></li>
