Update card heading b/c now we show all possible test cases
regardless of their status

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -86,7 +86,7 @@
             <div class="card-pf card-pf-accented">
                 <div class="card-pf-heading">
                     <h2 class="card-pf-title">
-                        {% trans 'Confirmed test cases' %}
+                        {% trans 'Test cases' %}
                     </h2>
                 </div>
                 <div class="card-pf-body">
