--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -19,6 +19,7 @@
               data-perm-remove-testcase="{{ perms.testcases.delete_testcaseplan }}"
               data-perm-add-testcase="{{ perms.testcases.add_testcase }}"
               data-trans-default-tester-prompt-message="{% trans 'Please type new email or username' %}"
+              data-trans-no-testcases-selected="{% trans 'No rows selected! Please select at least one!'%}"
         >TP-{{ object.pk }}:</span> {{ object.name }}
     </h1>
 
