Delete button should be red

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -178,7 +178,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <button class="btn btn-default paddingLeft"
+                                        <button class="btn btn-danger paddingLeft"
                                                 type="button"
                                                 {% if not perms.testcases.delete_testcaseplan %}
                                                     disabled
